--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
             </form>
         </div>
         
-        <ul class="lista" id="lista">
-            <li class="item"><strong>7</strong>Camisas</li>
-        </ul>
+        <ul class="lista" id="lista"></ul>
     </main>
 
     <script src="js/main.js"></script>
